<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@color/white"
        android:paddingLeft="95dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="276dp"
            android:layout_height="64dp"
            android:padding="2dp"
            android:shadowColor="#0B0A0A"
            android:text="Short Notes"
            android:textColor="@color/black"
            android:textColorHighlight="#E4A2A2"
            android:textSize="34sp"
             />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"

        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Cources_cse">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="-16dp">

                <!-- Item 1 -->

                <!-- Item 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="maths">

                    <TextView
                        android:layout_width="228dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:text="@string/maths"
                        android:textColor="#000000"
                        android:textSize="24sp"
                         />


                </LinearLayout>

                <!-- Item 3 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="os">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/os"
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="12dp"
                        android:textSize="24sp"
                        
                        android:textColor="#000000"/>


                </LinearLayout>

                <!-- Item 4 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="toc">

                    <TextView
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:text="@string/toc"
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:textSize="24sp"
                        
                        android:textColor="#000000"/>


                </LinearLayout>

                <!-- Item 5 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="dbms">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="72dp"
                        android:text="@string/dbms"
                        android:textSize="24sp"
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        
                        android:textColor="#000000"/>

                </LinearLayout>

                <!-- Item 6 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="cn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cn"
                        android:textSize="24sp"
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="12dp"
                        
                        android:textColor="#000000"/>


                </LinearLayout>

                <!-- Item 7 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="ds">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ds"
                        android:textSize="24sp"
                        
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="12dp"
                        android:textColor="#000000"/>


                </LinearLayout>

                <!-- Item 8 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="cd">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cd"
                        android:textSize="24sp"
                        
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="12dp"
                        android:textColor="#000000"/>


                </LinearLayout>

                <!-- Item 9 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="Algo">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Algo"
                        android:textSize="24sp"
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="12dp"
                        
                        android:textColor="#000000"/>


                </LinearLayout>

                <!-- Item 10 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="cao">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cao"
                        android:textSize="24sp"
                        
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:textColor="#000000"/>


                </LinearLayout>

                <!-- Item 11 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="dl">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dl"
                        android:textSize="24sp"
                        
                        android:paddingStart="12dp"
                        android:paddingEnd="0dp"
                        android:paddingTop="12dp"
                        android:textColor="#000000"/>


                </LinearLayout>

                <!-- Item 12 -->

                <!-- Item 13 -->

                <!-- Repeat similar structure for other items -->

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>