<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/browm"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="276dp"
            android:layout_height="64dp"
            android:padding="12dp"
            android:shadowColor="#0B0A0A"
            android:text="AI Cources"
            android:textColor="@color/white"
            android:textColorHighlight="#E4A2A2"
            android:textSize="34sp" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"

        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Cources_ai">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <!-- Item 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="aptitude">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Probability"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <!-- Item 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="maths">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="159dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Algebra"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <!-- Item 3 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="os">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Calculus"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <!-- Item 4 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="toc">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ds"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <!-- Item 5 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="dbms">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="72dp"
                        android:text="@string/dbms"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- Item 6 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="cn">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Ml"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <!-- Item 7 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="ds">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Ai"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="Shortnotes">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Shortnotes"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <!-- Item 13 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="Mocktest">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Mocktest"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <!-- Repeat similar structure for other items -->

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>