<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"

        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.cources_cse.MockTest">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <!-- Item 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="83dp"
                    android:layout_margin="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="22dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/mocktest"
                        android:contentDescription="@string/maths" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="67dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Gate MockTest "
                        android:textColor="#000000"
                        android:textSize="34sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="94dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="mock">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:text="Syllabus &amp; Mocktest"
                        android:textColor="#000000"
                        android:textSize="28sp" />


                </LinearLayout>

                <!-- Item 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="subject">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Subject wise test"
                        android:textColor="#000000"
                        android:textSize="28sp"/>


                </LinearLayout>

                <!-- Item 3 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="6dp"
                    android:background="@drawable/rounded_corners"
                    android:clickable="true"
                    android:elevation="8dp"
                    android:onClick="onItemClick"
                    android:padding="16dp"
                    android:tag="previous">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3."
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="GATE CSE Past Year Papers"
                        android:textColor="#000000"
                        android:textSize="28sp" />


                </LinearLayout>

                <!-- Item 4 -->
                <!-- Item 4 -->
                <!-- Item 4 -->
                <!-- Item 4 -->


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>